@@ -8,7 +8,8 @@ Version 3.10  2012-07-15
  * trunk free block check duplicate using avl tree
  * trunk file sync overwrite the dest file anyway
  * common/avl_tree.c: free data when delete
- * tracker.conf add parameter: trunk_init_reload_from_binlog
+ * tracker.conf add parameter: trunk_init_reload_from_binlog, when this flag 
+   is set to true, load all free trunk blocks from trunk binlog
 
 Version 3.09  2012-07-08
  * make.sh avoid override config files of /etc/fdfs/
